// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-swc > should apply source.include and source.exclude correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          /bar/,
        ],
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          /foo/,
        ],
        "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "inlineSourcesContent": true,
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "inlineSourcesContent": true,
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugin-swc > should disable react refresh when dev.hmr is false 1`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 1`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "node >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "node >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 2`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 3`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": true,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": true,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should disable react refresh when target is not web 4`] = `
{
  "rules": [
    {
      "include": [
        {
          "and": [
            "<ROOT>",
            {
              "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
            },
          ],
        },
        /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      ],
      "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
    {
      "mimetype": {
        "or": [
          "text/javascript",
          "application/javascript",
        ],
      },
      "use": [
        {
          "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
          "options": {
            "cwd": "<ROOT>",
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "extensions": {
              "lockCorejsVersion": {
                "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
              },
              "lodash": {
                "cwd": "<ROOT>",
                "ids": [
                  "lodash",
                  "lodash-es",
                ],
              },
            },
            "inlineSourcesContent": true,
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "react": {
                  "refresh": false,
                  "runtime": "classic",
                },
              },
            },
            "minify": false,
            "sourceMaps": true,
          },
        },
      ],
    },
  ],
}
`;

exports[`plugin-swc > should set correct swc minimizer options in production 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": {
          "compress": false,
          "format": {
            "asciiOnly": true,
          },
          "mangle": false,
        },
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set correct swc minimizer options using raw swc config 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": {
          "compress": false,
          "format": {
            "asciiOnly": true,
          },
          "mangle": false,
        },
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set multiple swc-loader 1`] = `
[
  {
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
        "options": {
          "cwd": "<ROOT>",
          "env": {
            "coreJs": "3.32",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "inlineSourcesContent": true,
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": true,
            },
          },
          "minify": false,
          "sourceMaps": true,
        },
      },
    ],
  },
  {
    "test": /override\\.ts/,
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
        "options": {
          "cwd": "<ROOT>",
          "env": {
            "coreJs": "3.32",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "inlineSourcesContent": true,
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": false,
            },
          },
          "minify": false,
          "sourceMaps": true,
        },
      },
    ],
  },
  {
    "mimetype": {
      "or": [
        "text/javascript",
        "application/javascript",
      ],
    },
    "use": [
      {
        "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
        "options": {
          "cwd": "<ROOT>",
          "env": {
            "coreJs": "3.32",
            "mode": "usage",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "<ROOT>",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
          },
          "inlineSourcesContent": true,
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": true,
            },
          },
          "minify": false,
          "sourceMaps": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-swc > should set swc minimizer in production 1`] = `
{
  "minimizer": [
    SwcMinimizerPlugin {
      "minifyOptions": {
        "cssMinify": {},
        "jsMinify": {
          "format": {
            "asciiOnly": true,
          },
          "mangle": true,
        },
      },
      "name": "swc-minimizer-plugin",
    },
  ],
}
`;

exports[`plugin-swc > should set swc-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "inlineSourcesContent": true,
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-swc/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
                "lodash": {
                  "cwd": "<ROOT>",
                  "ids": [
                    "lodash",
                    "lodash-es",
                  ],
                },
              },
              "inlineSourcesContent": true,
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "react": {
                    "refresh": true,
                    "runtime": "classic",
                  },
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
}
`;
